--- a/generators/page/templates/_page/_page.html
+++ b/generators/page/templates/_page/_page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title data-th-text="${pageTitle}">Enonic XP generator</title>
 </head>
