--- a/generators/part/templates/_part/_part.xml.ejs
+++ b/generators/part/templates/_part/_part.xml.ejs
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <part>
   <display-name><%= name %></display-name>
-  <config></config>
+  <config>
+  <% for (idx in fields) {
+      var fieldType = fields[idx].fieldType;
+      var fieldName = fields[idx].fieldName;
+      var fieldMinOccurrences = fields[idx].fieldMinOccurrences;
+      var fieldMaxOccurrences = fields[idx].fieldMaxOccurrences; %>
+
+      <input type="<%= fieldType %>" name="<%= fieldName %>">
+        <label><%= fieldName %></label>
+        <occurrences minimum="<%= fieldMinOccurrences %>" maximum="<%= fieldMaxOccurrences %>"/>
+      </input>
+      <% } %>
+  </config>
 </part>
